kustomize/color/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: color
  name: color
spec:
  revisionHistoryLimit: 1
  replicas: 2
  selector:
    matchLabels:
      app: color
  template:
    metadata:
      labels:
        app: color
    spec:
      nodeSelector:
        kubernetes.io/os: linux    # specify the OS your step should run on
        kubernetes.io/arch: amd64
      containers:
      - name: color
        image: lrochette/color:yellow
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
