kustomize/color/overlays/prod/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: color
spec:
  replicas: 5
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: color
  template:
    metadata:
      labels:
        app: color
    spec:
      containers:
      - name: ccolor
        image: lrochette/color:d85700a
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP

  strategy:
    canary:
      canaryService: color-preview
      steps:
      - setWeight: 20
      - pause: {duration: 30}
      - setWeight: 40
      - pause: {duration: 30}
      - setWeight: 60
      - pause: {duration: 30}
      - setWeight: 80
      - pause: {duration: 30}
