kustomize/color/overlays/prod/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: color
  name: color-preview
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
  selector:
    app: color
  type: LoadBalancer
