kustomize/color/overlays/prod/ingress-preview.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: color-preview
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: lr3.support.cf-cd.com
      http:
        paths:
          - path: /color-preview(/|$)(.*)
            backend:
              serviceName: color-preview
              servicePort: 80
